# bonus_track_hw

./: .env.example  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
src/: agent.py  executor.py  server.py
src/graph/: graph.py  nodes.py  state.py
src/llm/: client.py
src/strategy/: heuristics.py  models.py  prompts.py
tests/: conftest.py  test_parsing.py  test_strategy.py
